<resources>
    <string name="app_name">TeleFlow</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="scripts">Scripts</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_account">Delete Account</string>
    <string name="about_developers">About Developers</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="profile_visibility">Profile Visibility</string>
    <string name="create_script">Create Script</string>
    <string name="my_scripts">My Scripts</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="templates">Templates</string>
</resources>
